<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gebruiker.nathalievansterkenburg_pset3.InfoActivity">

    <TextView
    android:text=""
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="15dp"
    android:id="@+id/title"
    android:textSize="20sp"/>

    <ImageView
        android:layout_width="162dp"
        android:layout_height="240dp"
        android:id="@+id/poster"
        android:layout_marginTop="70dp"
        android:background="@mipmap/ic_launcher" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/poster"
        android:layout_toEndOf="@id/poster"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:id="@+id/plot" />

    <Button
        android:text="@string/faveadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/addfave"
        android:onClick="addFavorites"/>

    <Button
        android:text="@string/faveremove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/removefave"
        android:onClick="removeFavorites"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tofave"
        android:text="@string/tofave"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="220dp"
        android:onClick="toFavorites"/>


</RelativeLayout>
